WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189069
Muted elements do not have their Now Playing status updated when unmuted.
https://bugs.webkit.org/show_bug.cgi?id=189069
Summary
Muted elements do not have their Now Playing status updated when unmuted.
Jer Noble
Reported
2018-08-28 16:52:45 PDT
Muted elements do not have their Now Playing status updated when unmuted.
Attachments
Patch
(24.84 KB, patch)
2018-08-28 16:55 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(26.21 KB, patch)
2018-08-29 09:59 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(26.25 KB, patch)
2018-08-29 11:04 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
API Crach
(46.50 KB, text/plain)
2018-08-29 15:18 PDT
,
Truitt Savell
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-08-28 16:55:08 PDT
Created
attachment 348360
[details]
Patch
Jer Noble
Comment 2
2018-08-29 09:59:56 PDT
Created
attachment 348406
[details]
Patch
Jer Noble
Comment 3
2018-08-29 11:04:10 PDT
Created
attachment 348414
[details]
Patch
WebKit Commit Bot
Comment 4
2018-08-29 12:39:45 PDT
Comment on
attachment 348414
[details]
Patch Clearing flags on attachment: 348414 Committed
r235474
: <
https://trac.webkit.org/changeset/235474
>
WebKit Commit Bot
Comment 5
2018-08-29 12:39:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-08-29 12:40:20 PDT
<
rdar://problem/43853431
>
Truitt Savell
Comment 7
2018-08-29 15:18:22 PDT
Created
attachment 348437
[details]
API Crach API crash log from bot
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug