Source/WebCore/platform/audio/mac/MediaSessionManagerMac.h
@@ -55,6 +55,7 @@ private:
     void sessionWillEndPlayback(PlatformMediaSession&) override;
     void sessionDidEndRemoteScrubbing(const PlatformMediaSession&) override;
     void clientCharacteristicsChanged(PlatformMediaSession&) override;
+    void sessionCanProduceAudioChanged(PlatformMediaSession&) override;
 
     void updateNowPlayingInfo();
 
